tests/171_val_constness_error.err
pirxc compilation failed: exit status 1
Output: tests/171_val_constness_error.pirx:15:4: cannot take the address of constant c
tests/171_val_constness_error.pirx:16:17: cannot take the address of constant c
tests/171_val_constness_error.pirx:19:7: cannot assign value to constant p
tests/171_val_constness_error.pirx:20:7: cannot assign value to constant p
tests/171_val_constness_error.pirx:21:6: cannot apply ++ to constant p
tests/171_val_constness_error.pirx:22:3: cannot apply -- to constant p
tests/171_val_constness_error.pirx:23:17: cannot take the address of constant p
tests/171_val_constness_error.pirx:26:9: cannot assign value to constant l
Error: exit status 1
